# learnMPI

./: .gitignore  readme.txt
CMakeModel/: petsc.txt
PETsC/: poissonFD.c  readme.txt
learnMPI1/: main.cpp  readme.txt
learnMPI2/: CMakeLists.txt  main.cpp  readme.txt
learnMPI20250316/: CMakeLists.txt  main.cpp
learnMPI3/: main.cpp  readme.txt
learnMPI4/: main.cpp  readme.txt
learnMPI5/: CMakeLists.txt  main.cpp  readme.txt
learnMPI6/: main.cpp  readme.txt
learnMPI7/: CMakeLists.txt  main  main.cpp  readme.txt
learnPETSC1/: CMakeLists.txt  main.cpp  readme.md
learnPETSC10/: main.cpp  readme.md
learnPETSC11/: main.cpp  readme.md
learnPETSC12/: main.cpp  readme.md
learnPETSC13/: main.cpp  readme.md
learnPETSC14/: main.cpp  readme.md
learnPETSC15/: main.cpp  readme.md
learnPETSC16/: .gitignore  PetscBinaryIO.py  main.cpp  mesh2petsc.py  petsc_conf.py  readme.md  trap.msh  trap.vec
learnPETSC17/: readme.md
learnPETSC2/: main.cpp  readme.md
learnPETSC3/: main.cpp  readme.md
learnPETSC4/: main.cpp  readme.md
learnPETSC5/: main.cpp  readme.md
learnPETSC6/: main.cpp  readme.md
learnPETSC7/: main.cpp  readme.md
learnPETSC8/: CMakeLists.txt  main.cpp  readme.md
learnPETSC8/head/: test.h
learnPETSC8/source/: test.cpp
learnPETSC9/: CMakeLists.txt  main.cpp  readme.md
learnPETSC9/head/: poissonfunctions.h
learnPETSC9/source/: poissonfunctions.cpp
testGDB/: CMakeLists.txt  main.cpp
testGmsh/: gmsh2petsc.py  msh_to_petsc.py  output.is  petsc_conf.py  readme.md  trap.geo  trap.geo_unrolled  trap.is  trap.vec  trap1.msh  (+4 more)
(+16 files in other folders)
